src/snapshots/backer__public_api_test__api_simplified.snap
---
source: src/public_api_test.rs
assertion_line: 23
expression: public_api_simplified
---
pub mod backer
pub mod backer::nodes
pub fn backer::nodes::column<'a, D, S>(elements: alloc::vec::Vec<backer::Layout<'a, D, S>>) -> backer::Layout<'a, D, S>
pub fn backer::nodes::column_aligned<'a, D, S>(align: backer::Align, elements: alloc::vec::Vec<backer::Layout<'a, D, S>>) -> backer::Layout<'a, D, S>
pub fn backer::nodes::column_spaced<'a, D, S>(spacing: f32, elements: alloc::vec::Vec<backer::Layout<'a, D, S>>) -> backer::Layout<'a, D, S>
pub fn backer::nodes::column_spaced_aligned<'a, D, S>(spacing: f32, align: backer::Align, elements: alloc::vec::Vec<backer::Layout<'a, D, S>>) -> backer::Layout<'a, D, S>
pub fn backer::nodes::draw<'a, D, S>(data: impl core::ops::function::FnOnce(backer::Area, &mut S) -> alloc::vec::Vec<D> + 'a) -> backer::Layout<'a, D, S>
pub fn backer::nodes::empty<'a, D, S>() -> backer::Layout<'a, D, S>
pub fn backer::nodes::row<'a, D, S>(elements: alloc::vec::Vec<backer::Layout<'a, D, S>>) -> backer::Layout<'a, D, S>
pub fn backer::nodes::row_aligned<'a, D, S>(align: backer::Align, elements: alloc::vec::Vec<backer::Layout<'a, D, S>>) -> backer::Layout<'a, D, S>
pub fn backer::nodes::row_spaced<'a, D, S>(spacing: f32, elements: alloc::vec::Vec<backer::Layout<'a, D, S>>) -> backer::Layout<'a, D, S>
pub fn backer::nodes::row_spaced_aligned<'a, D, S>(spacing: f32, align: backer::Align, elements: alloc::vec::Vec<backer::Layout<'a, D, S>>) -> backer::Layout<'a, D, S>
pub fn backer::nodes::space<'a, D, S>() -> backer::Layout<'a, D, S>
pub fn backer::nodes::stack<'a, D, S>(elements: alloc::vec::Vec<backer::Layout<'a, D, S>>) -> backer::Layout<'a, D, S>
pub fn backer::nodes::stack_aligned<'a, D, S>(align: backer::Align, elements: alloc::vec::Vec<backer::Layout<'a, D, S>>) -> backer::Layout<'a, D, S>
pub enum backer::Align
pub backer::Align::Bottom
pub backer::Align::BottomCenter
pub backer::Align::BottomLeading
pub backer::Align::BottomTrailing
pub backer::Align::CenterCenter
pub backer::Align::CenterLeading
pub backer::Align::CenterTrailing
pub backer::Align::CenterX
pub backer::Align::CenterY
pub backer::Align::Leading
pub backer::Align::Top
pub backer::Align::TopCenter
pub backer::Align::TopLeading
pub backer::Align::TopTrailing
pub backer::Align::Trailing
pub struct backer::Area
pub backer::Area::height: f32
pub backer::Area::width: f32
pub backer::Area::x: f32
pub backer::Area::y: f32
impl backer::Area
pub fn backer::Area::new(x: f32, y: f32, width: f32, height: f32) -> Self
pub struct backer::Layout<'a, D, S>
impl<'a, D, S> backer::Layout<'a, D, S>
pub fn backer::Layout<'a, D, S>::align(self, align: backer::Align) -> Self
pub fn backer::Layout<'a, D, S>::aspect_height(self, ratio: f32) -> Self
pub fn backer::Layout<'a, D, S>::aspect_width(self, ratio: f32) -> Self
pub fn backer::Layout<'a, D, S>::dynamic_height(self, f: impl core::ops::function::Fn(f32, &mut S) -> f32 + 'a) -> backer::Layout<'a, D, S>
pub fn backer::Layout<'a, D, S>::dynamic_width(self, f: impl core::ops::function::Fn(f32, &mut S) -> f32 + 'a) -> backer::Layout<'a, D, S>
pub fn backer::Layout<'a, D, S>::expand(self) -> Self
pub fn backer::Layout<'a, D, S>::expand_x(self) -> Self
pub fn backer::Layout<'a, D, S>::expand_y(self) -> Self
pub fn backer::Layout<'a, D, S>::height(self, height: f32) -> Self
pub fn backer::Layout<'a, D, S>::height_range<R>(self, range: R) -> Self where R: core::ops::range::RangeBounds<f32>
pub fn backer::Layout<'a, D, S>::inert(self) -> Self
pub fn backer::Layout<'a, D, S>::inert_x(self) -> Self
pub fn backer::Layout<'a, D, S>::inert_y(self) -> Self
pub fn backer::Layout<'a, D, S>::layer(self, layer: i32) -> backer::Layout<'a, D, S>
pub fn backer::Layout<'a, D, S>::width(self, width: f32) -> Self
pub fn backer::Layout<'a, D, S>::width_range<R>(self, range: R) -> Self where R: core::ops::range::RangeBounds<f32>
impl<'a, D, S> backer::Layout<'a, D, S>
pub fn backer::Layout<'a, D, S>::draw(&mut self, available_area: backer::Area, state: &mut S) -> alloc::vec::Vec<D>
pub fn backer::Layout<'a, D, S>::min_height(&mut self, available_area: backer::Area, state: &mut S) -> core::option::Option<f32>
pub fn backer::Layout<'a, D, S>::min_width(&mut self, available_area: backer::Area, state: &mut S) -> core::option::Option<f32>
impl<'a, D, S> backer::Layout<'a, D, S>
pub fn backer::Layout<'a, D, S>::offset(self, x: f32, y: f32) -> backer::Layout<'a, D, S>
pub fn backer::Layout<'a, D, S>::offset_x(self, x: f32) -> backer::Layout<'a, D, S>
pub fn backer::Layout<'a, D, S>::offset_y(self, y: f32) -> backer::Layout<'a, D, S>
pub fn backer::Layout<'a, D, S>::pad(self, amount: f32) -> backer::Layout<'a, D, S>
pub fn backer::Layout<'a, D, S>::pad_bottom(self, amount: f32) -> Self
pub fn backer::Layout<'a, D, S>::pad_leading(self, amount: f32) -> Self
pub fn backer::Layout<'a, D, S>::pad_top(self, amount: f32) -> Self
pub fn backer::Layout<'a, D, S>::pad_trailing(self, amount: f32) -> Self
pub fn backer::Layout<'a, D, S>::pad_x(self, amount: f32) -> Self
pub fn backer::Layout<'a, D, S>::pad_y(self, amount: f32) -> Self
impl<'a, D: 'a, S: 'a> backer::Layout<'a, D, S>
pub fn backer::Layout<'a, D, S>::map<B: 'a>(self, f: impl core::ops::function::Fn(D) -> B + 'a) -> backer::Layout<'a, B, S>
impl<'a, D, S> core::fmt::Debug for backer::Layout<'a, D, S>
pub fn backer::Layout<'a, D, S>::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
